--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/react-complete-guide.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
