--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ yarn-error.log*
 /.idea/react-complete-guide.iml
 /.idea/vcs.xml
 /.idea/workspace.xml
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/dictionaries/jaime.xml
